--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -15,9 +15,7 @@
       "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #2\n",
       "  (fname, cnt))\n",
       "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/__init__.py:1067: UserWarning: Duplicate key in file \"/home/ubuntu/.config/matplotlib/matplotlibrc\", line #3\n",
-      "  (fname, cnt))\n",
-      "/home/ubuntu/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:278: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  'Matplotlib is building the font cache using fc-list. '\n"
+      "  (fname, cnt))\n"
      ]
     }
    ],
@@ -49,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"final_without_weather.csv\")"
+    "data = pd.read_csv(\"final_with_weather.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -100,16 +98,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>holiday</th>\n",
        "      <th>precip_in</th>\n",
        "      <th>Hour</th>\n",
        "      <th>Day</th>\n",
-       "      <th>holiday</th>\n",
        "      <th>green</th>\n",
        "      <th>yellow</th>\n",
        "      <th>total</th>\n",
+       "      <th>clear</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>fog</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>thunderstorm</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pickuptime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -121,70 +135,126 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-01-01 00:00:00-05:00</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <th>2014-01-01 01:00:00-05:00</th>\n",
+       "      <td>268.90</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>2595</td>\n",
        "      <td>30887</td>\n",
        "      <td>33482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014-01-01 01:00:00-05:00</th>\n",
-       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2630</td>\n",
-       "      <td>33650</td>\n",
-       "      <td>36280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-01-01 02:00:00-05:00</th>\n",
+       "      <td>268.48</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>2630</td>\n",
+       "      <td>33650</td>\n",
+       "      <td>36280</td>\n",
        "      <td>1</td>\n",
-       "      <td>2409</td>\n",
-       "      <td>30745</td>\n",
-       "      <td>33154</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-01-01 03:00:00-05:00</th>\n",
+       "      <td>268.33</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
+       "      <td>2409</td>\n",
+       "      <td>30745</td>\n",
+       "      <td>33154</td>\n",
        "      <td>1</td>\n",
-       "      <td>2276</td>\n",
-       "      <td>26244</td>\n",
-       "      <td>28520</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014-01-01 04:00:00-05:00</th>\n",
+       "      <td>268.10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4</td>\n",
        "      <td>2</td>\n",
+       "      <td>2276</td>\n",
+       "      <td>26244</td>\n",
+       "      <td>28520</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 05:00:00-05:00</th>\n",
+       "      <td>268.02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>1911</td>\n",
        "      <td>18792</td>\n",
        "      <td>20703</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           precip_in  Hour  Day  holiday  green  yellow  total\n",
-       "pickuptime                                                                    \n",
-       "2014-01-01 00:00:00-05:00        0.0     0    2        1   2595   30887  33482\n",
-       "2014-01-01 01:00:00-05:00        0.0     1    2        1   2630   33650  36280\n",
-       "2014-01-01 02:00:00-05:00        0.0     2    2        1   2409   30745  33154\n",
-       "2014-01-01 03:00:00-05:00        0.0     3    2        1   2276   26244  28520\n",
-       "2014-01-01 04:00:00-05:00        0.0     4    2        1   1911   18792  20703"
+       "                             temp  wind_speed  holiday  precip_in  Hour  Day  \\\n",
+       "pickuptime                                                                     \n",
+       "2014-01-01 01:00:00-05:00  268.90         2.0        1        0.0     1    2   \n",
+       "2014-01-01 02:00:00-05:00  268.48         3.0        1        0.0     2    2   \n",
+       "2014-01-01 03:00:00-05:00  268.33         3.0        1        0.0     3    2   \n",
+       "2014-01-01 04:00:00-05:00  268.10         3.0        1        0.0     4    2   \n",
+       "2014-01-01 05:00:00-05:00  268.02         1.0        1        0.0     5    2   \n",
+       "\n",
+       "                           green  yellow  total  clear  clouds  fog  rain  \\\n",
+       "pickuptime                                                                  \n",
+       "2014-01-01 01:00:00-05:00   2595   30887  33482      1       0    0     0   \n",
+       "2014-01-01 02:00:00-05:00   2630   33650  36280      1       0    0     0   \n",
+       "2014-01-01 03:00:00-05:00   2409   30745  33154      1       0    0     0   \n",
+       "2014-01-01 04:00:00-05:00   2276   26244  28520      1       0    0     0   \n",
+       "2014-01-01 05:00:00-05:00   1911   18792  20703      1       0    0     0   \n",
+       "\n",
+       "                           snow  thunderstorm  \n",
+       "pickuptime                                     \n",
+       "2014-01-01 01:00:00-05:00     0             0  \n",
+       "2014-01-01 02:00:00-05:00     0             0  \n",
+       "2014-01-01 03:00:00-05:00     0             0  \n",
+       "2014-01-01 04:00:00-05:00     0             0  \n",
+       "2014-01-01 05:00:00-05:00     0             0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,6 +1112,175 @@
    ],
    "source": [
     "np.mean(np.abs((inv_y - inv_yhat)/inv_y))*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>temp</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>precip_in</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>clear</th>\n",
+       "      <th>clouds</th>\n",
+       "      <th>fog</th>\n",
+       "      <th>rain</th>\n",
+       "      <th>snow</th>\n",
+       "      <th>thunderstorm</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pickuptime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 01:00:00-05:00</th>\n",
+       "      <td>268.90</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 02:00:00-05:00</th>\n",
+       "      <td>268.48</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 03:00:00-05:00</th>\n",
+       "      <td>268.33</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 04:00:00-05:00</th>\n",
+       "      <td>268.10</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-01-01 05:00:00-05:00</th>\n",
+       "      <td>268.02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20703</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             temp  wind_speed  holiday  precip_in  Hour  Day  \\\n",
+       "pickuptime                                                                     \n",
+       "2014-01-01 01:00:00-05:00  268.90         2.0        1        0.0     1    2   \n",
+       "2014-01-01 02:00:00-05:00  268.48         3.0        1        0.0     2    2   \n",
+       "2014-01-01 03:00:00-05:00  268.33         3.0        1        0.0     3    2   \n",
+       "2014-01-01 04:00:00-05:00  268.10         3.0        1        0.0     4    2   \n",
+       "2014-01-01 05:00:00-05:00  268.02         1.0        1        0.0     5    2   \n",
+       "\n",
+       "                           clear  clouds  fog  rain  snow  thunderstorm  total  \n",
+       "pickuptime                                                                      \n",
+       "2014-01-01 01:00:00-05:00      1       0    0     0     0             0  33482  \n",
+       "2014-01-01 02:00:00-05:00      1       0    0     0     0             0  36280  \n",
+       "2014-01-01 03:00:00-05:00      1       0    0     0     0             0  33154  \n",
+       "2014-01-01 04:00:00-05:00      1       0    0     0     0             0  28520  \n",
+       "2014-01-01 05:00:00-05:00      1       0    0     0     0             0  20703  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_and_target.head()"
    ]
   },
   {
