--- a/Test_without_weather_time.ipynb
+++ b/Test_without_weather_time.ipynb
@@ -97,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalize data & make LSTM model structure\n",
     "features_and_target = pd.concat([data, num_pickups], axis = 1)\n",
     "values = features_and_target.values\n",
     "\n",
@@ -118,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete significantly wrong data & compare the date value\n",
+    "# exlcude significantly deviated data\n",
     "total_values = reframed.values\n",
     "n_p = np.argmin(total_values[365*24*3:, -1])\n",
     "n_p = n_p + 365*24*3\n",
@@ -10236,7 +10237,7 @@
     "    # reshape back to 2d\n",
     "    test_X = test_X.reshape((test_X.shape[0], -1))\n",
     "\n",
-    "    # invert scaling for forecast# invert \n",
+    "    # invert scaling for forecast \n",
     "    inv_yhat = np.concatenate((test[:, 115:119], yhat), axis=1)\n",
     "    inv_yhat = scaler.inverse_transform(inv_yhat)\n",
     "    inv_yhat = inv_yhat[:,-1]\n",
@@ -10263,12 +10264,12 @@
     "    maep = np.mean(np.abs((inv_y - inv_yhat)/inv_y))*100\n",
     "    result[3, i] = maep\n",
     "    \n",
-    "    #train bias\n",
+    "    #train error(bias)\n",
     "    yhat_t = model.predict(train_X)\n",
     "    # reshape back to 2d\n",
     "    train_X = train_X.reshape((train_X.shape[0], -1))\n",
     "\n",
-    "    # invert scaling for forecast# invert \n",
+    "    # invert scaling for forecast\n",
     "    inv_yhat_t = np.concatenate((train[:, 115:119], yhat_t), axis=1)\n",
     "    inv_yhat_t = scaler.inverse_transform(inv_yhat_t)\n",
     "    inv_yhat_t = inv_yhat_t[:,-1]\n",
@@ -10281,7 +10282,9 @@
     "    inv_yhat_gte_zero = inv_yhat_t.copy()\n",
     "    inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
     "\n",
+    "    # exlcude significantly deviated data\n",
     "    index = (np.abs((inv_y_t - inv_yhat_t)/inv_y_t) < 1)\n",
+    "    \n",
     "    # calculate mean absolute error percentage\n",
     "    maep = np.mean(np.abs((inv_y_t[index] - inv_yhat_t[index])/inv_y_t[index]))*100\n",
     "    \n",
