--- a/Test_with_weather.ipynb
+++ b/Test_with_weather.ipynb
@@ -104,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalize data & make LSTM model structure\n",
     "features_and_target = pd.concat([data, num_pickups], axis = 1)\n",
     "values = features_and_target.values\n",
     "\n",
@@ -125,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete significantly wrong data\n",
+    "# exclude significantly deviated data\n",
     "total_values = reframed.values\n",
     "n_p = np.argmin(total_values[365*24*3:, -1])\n",
     "n_p = n_p + 365*24*3\n",
@@ -150,7 +151,7 @@
     }
    ],
    "source": [
-    "# split into train and test sets# split i # split  \n",
+    "# split into train and test sets\n",
     "n_train_hours = 365 * 24 * 3\n",
     "train = values[:n_train_hours, :]\n",
     "test = values[n_train_hours:, :]\n",
@@ -436,7 +437,7 @@
     "# reshape back to 2d\n",
     "test_X = test_X.reshape((test_X.shape[0], -1))\n",
     "\n",
-    "# invert scaling for forecast# invert \n",
+    "# invert scaling for forecast\n",
     "inv_yhat = np.concatenate((test[:, 299:311], yhat), axis=1)\n",
     "inv_yhat = scaler.inverse_transform(inv_yhat)\n",
     "inv_yhat = inv_yhat[:,-1]\n",
@@ -481,12 +482,12 @@
     }
    ],
    "source": [
-    "#train bias\n",
+    "#train error(bias)\n",
     "yhat_t = model.predict(train_X)\n",
     "# reshape back to 2d\n",
     "train_X = train_X.reshape((train_X.shape[0], -1))\n",
     "\n",
-    "# invert scaling for forecast# invert \n",
+    "# invert scaling for forecast\n",
     "inv_yhat_t = np.concatenate((train[:, 299:311], yhat_t), axis=1)\n",
     "inv_yhat_t = scaler.inverse_transform(inv_yhat_t)\n",
     "inv_yhat_t = inv_yhat_t[:,-1]\n",
@@ -499,6 +500,7 @@
     "inv_yhat_gte_zero = inv_yhat_t.copy()\n",
     "inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
     "\n",
+    "# exlcude significantly deviated data\n",
     "index = (np.abs((inv_y_t - inv_yhat_t)/inv_y_t) < 1)\n",
     "\n",
     "# calculate r2\n",
@@ -529,6 +531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalize data & make LSTM model structure\n",
     "features_and_target = pd.concat([data, num_pickups], axis = 1)\n",
     "values = features_and_target.values\n",
     "\n",
@@ -550,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete significantly wrong data\n",
+    "# exclude significantly deviated data\n",
     "total_values = reframed.values\n",
     "n_p = np.argmin(total_values[365*24*3:, -1])\n",
     "n_p = n_p + 365*24*3\n",
@@ -575,7 +578,7 @@
     }
    ],
    "source": [
-    "# split into train and test sets# split i # split  \n",
+    "# split into train and test sets \n",
     "n_train_hours = 365 * 24 * 3\n",
     "train = values[:n_train_hours, :]\n",
     "test = values[n_train_hours:, :]\n",
@@ -861,7 +864,7 @@
     "# reshape back to 2d\n",
     "test_X = test_X.reshape((test_X.shape[0], -1))\n",
     "\n",
-    "# invert scaling for forecast# invert \n",
+    "# invert scaling for forecast\n",
     "inv_yhat = np.concatenate((test[:, 143:155], yhat), axis=1)\n",
     "inv_yhat = scaler.inverse_transform(inv_yhat)\n",
     "inv_yhat = inv_yhat[:,-1]\n",
@@ -906,7 +909,7 @@
     }
    ],
    "source": [
-    "#train bias\n",
+    "#train error(bias)\n",
     "yhat_t = model.predict(train_X)\n",
     "# reshape back to 2d\n",
     "train_X = train_X.reshape((train_X.shape[0], -1))\n",
@@ -924,6 +927,7 @@
     "inv_yhat_gte_zero = inv_yhat_t.copy()\n",
     "inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
     "\n",
+    "# exlcude significantly deviated data\n",
     "index = (np.abs((inv_y_t - inv_yhat_t)/inv_y_t) < 1)\n",
     "\n",
     "# calculate r2\n",
@@ -954,6 +958,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalize data & make LSTM model structure\n",
     "features_and_target = pd.concat([data, num_pickups], axis = 1)\n",
     "values = features_and_target.values\n",
     "\n",
@@ -975,7 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete significantly wrong data\n",
+    "# exlcude significantly deviated data\n",
     "total_values = reframed.values\n",
     "n_p = np.argmin(total_values[365*24*3:, -1])\n",
     "n_p = n_p + 365*24*3\n",
@@ -1000,7 +1005,7 @@
     }
    ],
    "source": [
-    "# split into train and test sets# split i # split  \n",
+    "# split into train and test sets\n",
     "n_train_hours = 365 * 24 * 3\n",
     "train = values[:n_train_hours, :]\n",
     "test = values[n_train_hours:, :]\n",
@@ -1286,7 +1291,7 @@
     "# reshape back to 2d\n",
     "test_X = test_X.reshape((test_X.shape[0], -1))\n",
     "\n",
-    "# invert scaling for forecast# invert \n",
+    "# invert scaling for forecast\n",
     "inv_yhat = np.concatenate((test[:, 611:623], yhat), axis=1)\n",
     "inv_yhat = scaler.inverse_transform(inv_yhat)\n",
     "inv_yhat = inv_yhat[:,-1]\n",
@@ -1331,7 +1336,7 @@
     }
    ],
    "source": [
-    "#train bias\n",
+    "#train error(bias)\n",
     "yhat_t = model.predict(train_X)\n",
     "# reshape back to 2d\n",
     "train_X = train_X.reshape((train_X.shape[0], -1))\n",
@@ -1349,6 +1354,7 @@
     "inv_yhat_gte_zero = inv_yhat_t.copy()\n",
     "inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
     "\n",
+    "# exlcude significantly deviated data\n",
     "index = (np.abs((inv_y_t - inv_yhat_t)/inv_y_t) < 1)\n",
     "\n",
     "# calculate r2\n",
