Add existing file

--- a/data_generate.ipynb
+++ b/data_generate.ipynb
@@ -119,6 +119,32 @@
     "\n",
     "result.to_csv('C:\\\\Users\\\\shj50\\\\Documents\\\\grad AA\\\\AA\\\\first spring\\\\230(deep learning)\\\\final project\\\\data_by_minute\\\\final.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather = pd.read_csv('exact_condition_data.csv')\n",
+    "\n",
+    "green = pd.read_csv('green.csv')\n",
+    "yellow = pd.read_csv('yellow.csv')\n",
+    "\n",
+    "#generate minute step data\n",
+    "new_green = green.groupby(green.index // 20 * 20).sum()\n",
+    "new_yellow = yellow.groupby(yellow.index // 20 * 20).sum()\n",
+    "weather = pd.concat([weather]*3 , ignore_index=True)\n",
+    "weather['Unnamed: 0'] = pd.to_datetime(weather['Unnamed: 0'], format=\"%Y-%m-%d %H:00\")\n",
+    "weather = weather.sort_values(by=['Unnamed: 0'])\n",
+    "new_weather = weather.set_index('Unnamed: 0')\n",
+    "new_green = new_green.set_index(new_weather.index)\n",
+    "new_yellow = new_yellow.set_index(new_weather.index)\n",
+    "result = pd.concat([new_weather, new_green, new_yellow], axis=1)\n",
+    "result['total'] = result['green'] + result['yellow']\n",
+    "\n",
+    "result.to_csv('final_20minutes.csv')"
+   ]
   }
  ],
  "metadata": {
