Add existing file

--- a/Test_with_5minutes.ipynb
+++ b/Test_with_5minutes.ipynb
@@ -519,6 +519,371 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set for same data size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26280, 235) 26280 (26280,)\n",
+      "(26280, 47, 5) (26280,) (6469, 47, 5) (6469,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split into train and test sets \n",
+    "n_train_hours = 365 * 24 * 3 * 12\n",
+    "train = values[n_train_hours - 26280 :n_train_hours, :]\n",
+    "test = values[n_train_hours:n_train_hours + 6469, :]\n",
+    "# split into input and outputs\n",
+    "n_obs = n_hours * n_features\n",
+    "train_X, train_y = train[:, :n_obs], train[:, -1]\n",
+    "test_X, test_y = test[:, :n_obs], test[:, -1]\n",
+    "print(train_X.shape, len(train_X), train_y.shape)\n",
+    "# reshape input to be 3D [samples, timesteps, features]\n",
+    "train_X = train_X.reshape((train_X.shape[0], n_hours, n_features))\n",
+    "test_X = test_X.reshape((test_X.shape[0], n_hours, n_features))\n",
+    "print(train_X.shape, train_y.shape, test_X.shape, test_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 26280 samples, validate on 6469 samples\n",
+      "Epoch 1/100\n",
+      " - 10s - loss: 0.0544 - val_loss: 0.0277\n",
+      "Epoch 2/100\n",
+      " - 9s - loss: 0.0249 - val_loss: 0.0215\n",
+      "Epoch 3/100\n",
+      " - 9s - loss: 0.0190 - val_loss: 0.0181\n",
+      "Epoch 4/100\n",
+      " - 9s - loss: 0.0161 - val_loss: 0.0165\n",
+      "Epoch 5/100\n",
+      " - 9s - loss: 0.0171 - val_loss: 0.0215\n",
+      "Epoch 6/100\n",
+      " - 10s - loss: 0.0151 - val_loss: 0.0138\n",
+      "Epoch 7/100\n",
+      " - 9s - loss: 0.0148 - val_loss: 0.0136\n",
+      "Epoch 8/100\n",
+      " - 7s - loss: 0.0138 - val_loss: 0.0130\n",
+      "Epoch 9/100\n",
+      " - 7s - loss: 0.0137 - val_loss: 0.0127\n",
+      "Epoch 10/100\n",
+      " - 7s - loss: 0.0135 - val_loss: 0.0126\n",
+      "Epoch 11/100\n",
+      " - 7s - loss: 0.0131 - val_loss: 0.0120\n",
+      "Epoch 12/100\n",
+      " - 7s - loss: 0.0130 - val_loss: 0.0132\n",
+      "Epoch 13/100\n",
+      " - 7s - loss: 0.0123 - val_loss: 0.0113\n",
+      "Epoch 14/100\n",
+      " - 7s - loss: 0.0121 - val_loss: 0.0111\n",
+      "Epoch 15/100\n",
+      " - 7s - loss: 0.0120 - val_loss: 0.0112\n",
+      "Epoch 16/100\n",
+      " - 7s - loss: 0.0119 - val_loss: 0.0114\n",
+      "Epoch 17/100\n",
+      " - 7s - loss: 0.0116 - val_loss: 0.0110\n",
+      "Epoch 18/100\n",
+      " - 7s - loss: 0.0116 - val_loss: 0.0111\n",
+      "Epoch 19/100\n",
+      " - 7s - loss: 0.0115 - val_loss: 0.0113\n",
+      "Epoch 20/100\n",
+      " - 7s - loss: 0.0114 - val_loss: 0.0113\n",
+      "Epoch 21/100\n",
+      " - 7s - loss: 0.0113 - val_loss: 0.0108\n",
+      "Epoch 22/100\n",
+      " - 7s - loss: 0.0111 - val_loss: 0.0104\n",
+      "Epoch 23/100\n",
+      " - 7s - loss: 0.0112 - val_loss: 0.0116\n",
+      "Epoch 24/100\n",
+      " - 7s - loss: 0.0107 - val_loss: 0.0105\n",
+      "Epoch 25/100\n",
+      " - 7s - loss: 0.0111 - val_loss: 0.0114\n",
+      "Epoch 26/100\n",
+      " - 7s - loss: 0.0105 - val_loss: 0.0101\n",
+      "Epoch 27/100\n",
+      " - 7s - loss: 0.0110 - val_loss: 0.0114\n",
+      "Epoch 28/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0099\n",
+      "Epoch 29/100\n",
+      " - 7s - loss: 0.0110 - val_loss: 0.0114\n",
+      "Epoch 30/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0105\n",
+      "Epoch 31/100\n",
+      " - 7s - loss: 0.0108 - val_loss: 0.0110\n",
+      "Epoch 32/100\n",
+      " - 7s - loss: 0.0102 - val_loss: 0.0105\n",
+      "Epoch 33/100\n",
+      " - 7s - loss: 0.0105 - val_loss: 0.0110\n",
+      "Epoch 34/100\n",
+      " - 7s - loss: 0.0104 - val_loss: 0.0116\n",
+      "Epoch 35/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0106\n",
+      "Epoch 36/100\n",
+      " - 7s - loss: 0.0105 - val_loss: 0.0107\n",
+      "Epoch 37/100\n",
+      " - 7s - loss: 0.0102 - val_loss: 0.0115\n",
+      "Epoch 38/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0111\n",
+      "Epoch 39/100\n",
+      " - 7s - loss: 0.0102 - val_loss: 0.0112\n",
+      "Epoch 40/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0108\n",
+      "Epoch 41/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0115\n",
+      "Epoch 42/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0111\n",
+      "Epoch 43/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0113\n",
+      "Epoch 44/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0115\n",
+      "Epoch 45/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0112\n",
+      "Epoch 46/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0119\n",
+      "Epoch 47/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0120\n",
+      "Epoch 48/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0091\n",
+      "Epoch 49/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0120\n",
+      "Epoch 50/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0108\n",
+      "Epoch 51/100\n",
+      " - 7s - loss: 0.0108 - val_loss: 0.0120\n",
+      "Epoch 52/100\n",
+      " - 7s - loss: 0.0098 - val_loss: 0.0090\n",
+      "Epoch 53/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0117\n",
+      "Epoch 54/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0105\n",
+      "Epoch 55/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0123\n",
+      "Epoch 56/100\n",
+      " - 7s - loss: 0.0097 - val_loss: 0.0111\n",
+      "Epoch 57/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0117\n",
+      "Epoch 58/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0120\n",
+      "Epoch 59/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0109\n",
+      "Epoch 60/100\n",
+      " - 7s - loss: 0.0094 - val_loss: 0.0107\n",
+      "Epoch 61/100\n",
+      " - 7s - loss: 0.0099 - val_loss: 0.0117\n",
+      "Epoch 62/100\n",
+      " - 7s - loss: 0.0098 - val_loss: 0.0111\n",
+      "Epoch 63/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0110\n",
+      "Epoch 64/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0120\n",
+      "Epoch 65/100\n",
+      " - 7s - loss: 0.0094 - val_loss: 0.0108\n",
+      "Epoch 66/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0095\n",
+      "Epoch 67/100\n",
+      " - 7s - loss: 0.0105 - val_loss: 0.0121\n",
+      "Epoch 68/100\n",
+      " - 7s - loss: 0.0098 - val_loss: 0.0091\n",
+      "Epoch 69/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0118\n",
+      "Epoch 70/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0097\n",
+      "Epoch 71/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0110\n",
+      "Epoch 72/100\n",
+      " - 7s - loss: 0.0106 - val_loss: 0.0118\n",
+      "Epoch 73/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0096\n",
+      "Epoch 74/100\n",
+      " - 7s - loss: 0.0097 - val_loss: 0.0105\n",
+      "Epoch 75/100\n",
+      " - 7s - loss: 0.0102 - val_loss: 0.0112\n",
+      "Epoch 76/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0088\n",
+      "Epoch 77/100\n",
+      " - 7s - loss: 0.0106 - val_loss: 0.0101\n",
+      "Epoch 78/100\n",
+      " - 7s - loss: 0.0097 - val_loss: 0.0127\n",
+      "Epoch 79/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0097\n",
+      "Epoch 80/100\n",
+      " - 7s - loss: 0.0097 - val_loss: 0.0092\n",
+      "Epoch 81/100\n",
+      " - 7s - loss: 0.0104 - val_loss: 0.0098\n",
+      "Epoch 82/100\n",
+      " - 7s - loss: 0.0091 - val_loss: 0.0100\n",
+      "Epoch 83/100\n",
+      " - 7s - loss: 0.0093 - val_loss: 0.0088\n",
+      "Epoch 84/100\n",
+      " - 7s - loss: 0.0099 - val_loss: 0.0114\n",
+      "Epoch 85/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0094\n",
+      "Epoch 86/100\n",
+      " - 7s - loss: 0.0098 - val_loss: 0.0108\n",
+      "Epoch 87/100\n",
+      " - 7s - loss: 0.0109 - val_loss: 0.0103\n",
+      "Epoch 88/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0098\n",
+      "Epoch 89/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0111\n",
+      "Epoch 90/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0093\n",
+      "Epoch 91/100\n",
+      " - 7s - loss: 0.0096 - val_loss: 0.0099\n",
+      "Epoch 92/100\n",
+      " - 7s - loss: 0.0108 - val_loss: 0.0093\n",
+      "Epoch 93/100\n",
+      " - 7s - loss: 0.0095 - val_loss: 0.0098\n",
+      "Epoch 94/100\n",
+      " - 7s - loss: 0.0109 - val_loss: 0.0093\n",
+      "Epoch 95/100\n",
+      " - 7s - loss: 0.0103 - val_loss: 0.0099\n",
+      "Epoch 96/100\n",
+      " - 7s - loss: 0.0104 - val_loss: 0.0093\n",
+      "Epoch 97/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0094\n",
+      "Epoch 98/100\n",
+      " - 7s - loss: 0.0101 - val_loss: 0.0095\n",
+      "Epoch 99/100\n",
+      " - 7s - loss: 0.0100 - val_loss: 0.0094\n",
+      "Epoch 100/100\n",
+      " - 7s - loss: 0.0099 - val_loss: 0.0095\n"
+     ]
+    }
+   ],
+   "source": [
+    "# design network\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(24, input_shape=(train_X.shape[1], train_X.shape[2])))\n",
+    "model.add(Dense(1))\n",
+    "model.compile(loss='mae', optimizer='adam')\n",
+    "\n",
+    "# fit network\n",
+    "history = model.fit(train_X, train_y, epochs=100, batch_size=100,\n",
+    "                    validation_data=(test_X, test_y), verbose=2, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2:   0.9880702542809908\n",
+      "MAE:  45.968204\n",
+      "RMSE: 60.793563983986004\n",
+      "mean absolute error percentage:  5.405549332499504\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a prediction \n",
+    "yhat = model.predict(test_X)\n",
+    "# reshape back to 2d\n",
+    "test_X = test_X.reshape((test_X.shape[0], -1))\n",
+    "\n",
+    "# invert scaling for forecast# invert \n",
+    "inv_yhat = np.concatenate((test[:, 235:239], yhat), axis=1)\n",
+    "inv_yhat = scaler.inverse_transform(inv_yhat)\n",
+    "inv_yhat = inv_yhat[:,-1]\n",
+    "\n",
+    "# invert scaling for actual\n",
+    "test_y = test_y.reshape((len(test_y), 1))\n",
+    "inv_y = np.concatenate((test[:, 235:239], test_y), axis=1)\n",
+    "inv_y = scaler.inverse_transform(inv_y)\n",
+    "inv_y = inv_y[:,-1]\n",
+    "inv_yhat_gte_zero = inv_yhat.copy()\n",
+    "inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
+    "\n",
+    "# calculate r2\n",
+    "print(\"R2:  \", r2_score(inv_y, inv_yhat))\n",
+    "\n",
+    "# calculate mean absolute error\n",
+    "print(\"MAE: \", mean_absolute_error(inv_y, inv_yhat))\n",
+    "\n",
+    "# calculate rmse\n",
+    "rmse = math.sqrt(mean_squared_error(inv_y, inv_yhat))\n",
+    "print(\"RMSE:\", rmse)\n",
+    "\n",
+    "# calculate mean absolute error percentage\n",
+    "maep = np.mean(np.abs((inv_y - inv_yhat)/inv_y))*100\n",
+    "print(\"mean absolute error percentage: \", maep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2:   0.9893196165488852\n",
+      "MAE:  46.780636\n",
+      "RMSE: 61.7921339837493\n",
+      "mean absolute error percentage:  4.7499921172857285\n"
+     ]
+    }
+   ],
+   "source": [
+    "#train error(bias)\n",
+    "yhat_t = model.predict(train_X)\n",
+    "# reshape back to 2d\n",
+    "train_X = train_X.reshape((train_X.shape[0], -1))\n",
+    "\n",
+    "# invert scaling for forecast\n",
+    "inv_yhat_t = np.concatenate((train[:, 235:239], yhat_t), axis=1)\n",
+    "inv_yhat_t = scaler.inverse_transform(inv_yhat_t)\n",
+    "inv_yhat_t = inv_yhat_t[:,-1]\n",
+    "\n",
+    "# invert scaling for actual\n",
+    "train_y = train_y.reshape((len(train_y), 1))\n",
+    "inv_y_t = np.concatenate((train[:, 235:239], train_y), axis=1)\n",
+    "inv_y_t = scaler.inverse_transform(inv_y_t)\n",
+    "inv_y_t = inv_y_t[:,-1]\n",
+    "inv_yhat_gte_zero = inv_yhat_t.copy()\n",
+    "inv_yhat_gte_zero[inv_yhat_gte_zero < 0] = 0\n",
+    "\n",
+    "# exlcude significantly deviated data\n",
+    "index = (np.abs((inv_y_t - inv_yhat_t)/inv_y_t) < 1)\n",
+    "\n",
+    "# calculate r2\n",
+    "print(\"R2:  \", r2_score(inv_y_t[index], inv_yhat_t[index]))\n",
+    "\n",
+    "# calculate mean absolute error\n",
+    "print(\"MAE: \", mean_absolute_error(inv_y_t[index], inv_yhat_t[index]))\n",
+    "\n",
+    "# calculate rmse\n",
+    "rmse = math.sqrt(mean_squared_error(inv_y_t[index], inv_yhat_t[index]))\n",
+    "print(\"RMSE:\", rmse)\n",
+    "\n",
+    "# calculate mean absolute error percentage\n",
+    "maep = np.mean(np.abs((inv_y_t[index] - inv_yhat_t[index])/inv_y_t[index]))*100\n",
+    "print(\"mean absolute error percentage: \", maep)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
